Tried to address overflow of many simultaneous timebars issue, not submitted to toolshop

--- a/http/timeline_2.3.0/timeline_js/timeline-bundle.css
+++ b/http/timeline_2.3.0/timeline_js/timeline-bundle.css
@@ -163,8 +163,9 @@
     padding-left: 5px;
     padding-bottom: 5px;
 }.timeline-container {
-    position: relative;
-    overflow: hidden;
+    /* position: relative;
+    overflow: hidden; */
+    overflow-x:hidden; overflow-y:scroll; position: relative;
 }
 
 .timeline-copyright {
